--- a/src/main/resources/static/collect.html
+++ b/src/main/resources/static/collect.html
@@ -14,7 +14,7 @@
     <h1>Hello, world!</h1>
     <div class="row"></div>
     <div id="collect_toolbar">
-        <button id="add_ballot" class="btn btn-primary">
+        <button id="add_ballot" class="btn btn-primary" onclick="openModal()">
             <i class="bi bi-database-add"></i> Add
         </button>
     </div>
@@ -23,14 +23,63 @@
         <tr>
             <th data-field="ballotId" hidden></th>
             <th data-field="serialNo">选票编号</th>
-            <th data-field="supervisorCount">监事数量</th>
+            <th data-field="supervisorCount">监事候选人数量</th>
             <th data-field="supervisorExceeded">supervisorExceeded</th>
-            <th data-field="directorCount">理事数量</th>
+            <th data-field="directorCount">理事候选人数量</th>
             <th data-field="directorExceed">directorExceed</th>
         </tr>
         </thead>
     </table>
 </div>
+
+<div class="modal fade" id="myModal" tabindex="-1" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">选择项目</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div>
+                    <h6>监事候选人预备人选（已选中：<span id="countSupervisor">0</span>）</h6>
+                    <div id="groupSupervisor" class="row mb-3"></div>
+                </div>
+                <div>
+                    <h6>理事候选人预备人选（已选中：<span id="countDirector">0</span>）</h6>
+                    <div id="groupDirector" class="row mb-3"></div>
+                </div>
+<!--                <div class="mb-3">-->
+<!--                    <h6>额外候选人（已选中：<span id="countExtra">0</span>，最多 3 个）</h6>-->
+<!--                    <div class="input-group mb-2">-->
+<!--                        <input type="text" id="extraInput" class="form-control" placeholder="输入项名称">-->
+<!--                        <button type="button" class="btn btn-outline-secondary" onclick="addExtraItem()">添加</button>-->
+<!--                    </div>-->
+<!--                    <div id="extraItems" class="row mb-3"></div>-->
+<!--                </div>-->
+                <div class="row g-2 mb-2">
+                    <h6>额外候选人（已选中：<span id="countExtra">0</span>，最多 3 个）</h6>
+                    <div class="col-6">
+                        <input type="text" id="extraInput" class="form-control" placeholder="输入项名称">
+                    </div>
+                    <div class="col-2">
+                        <select id="extraType" class="form-select">
+                            <option value="0">监事</option>
+                            <option value="1">理事</option>
+                        </select>
+                    </div>
+                    <div class="col-auto">
+                        <button type="button" class="btn btn-outline-secondary" onclick="addExtraItem()">添加</button>
+                    </div>
+                </div>
+                <div id="extraItems" class="row mb-3"></div>
+            </div>
+            <div class="modal-footer">
+                <button id="submitBtn" class="btn btn-primary">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <script src="bootstrap-5.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script src="bootstrap-tables/bootstrap-table.min.js" crossorigin="anonymous"></script>
